MB-36484: Don't attempt to mark PreparedMaybeVisible on active->active

The changes added by 07f16fa1 introduced new code which marks
trackedWrites as "PreparedMaybeVisible", this code is only for
transitions away from active, but is being triggered on
active->active which can result in an exception.

Change-Id: I86d5b6550bf85f0bd0497b5569b05705543dcf6a
Reviewed-on: http://review.couchbase.org/116432
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>